# action/routes.go
@@ -13,6 +13,7 @@ import (
 	"github.com/factly/data-portal-api/action/plan"
 	"github.com/factly/data-portal-api/action/product"
 	"github.com/factly/data-portal-api/action/tag"
+	"github.com/factly/data-portal-api/action/user"
 	_ "github.com/factly/data-portal-api/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/go-chi/chi"
 	"github.com/go-chi/cors"
@@ -36,16 +37,7 @@ func RegisterRoutes() http.Handler {
 		MaxAge:           300, // Maximum value not ignored by any of major browsers
 	}))
 	r.Mount("/currencies", currency.Router())
-
-	r.Route("/users", func(r chi.Router) {
-		r.Post("/", CreateUser)
-		r.Get("/", GetUsers)
-		r.Route("/{id}", func(r chi.Router) {
-			r.Get("/", GetUser)
-			r.Delete("/", DeleteUser)
-			r.Put("/", UpdateUser)
-		})
-	})
+	r.Mount("/users", user.Router())
 	r.Mount("/plans", plan.Router())
 	r.Mount("/memberships", membership.Router())
 	r.Mount("/payments", payment.Router())
@@ -58,15 +50,6 @@ func RegisterRoutes() http.Handler {
 	r.Mount("/cart-items", cartitem.Router())
 
 	r.Mount("/orders", order.Router())
-
-	r.Route("/order-items", func(r chi.Router) {
-		r.Post("/", CreateOrderItem)
-		r.Route("/{id}", func(r chi.Router) {
-			r.Get("/", GetOrderItem)
-			r.Delete("/", DeleteOrderItem)
-			r.Put("/", UpdateOrderItem)
-		})
-	})
 
 	// swagger docs
 	r.Get("/swagger/*", httpSwagger.WrapHandler)
